src/projects.css
.project {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  justify-content: space-between;
  margin-bottom: 40px;
  gap: 25px;
  width: 100%;
}

.project-image {
  width: 66.67%; /* Set the image width to 2/3 of its original size */
  height: auto;  /* Maintain aspect ratio */
  object-fit: contain;
  border-radius: 10px;
  border: 5px solid white;
  box-sizing: border-box; /* Include border in width and height */
  margin-right: 25px; /* Adjust margin as needed */
}


.project-content {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding-left: 20px; 
}

.project-title {
  font-size: 1em;  /* Reduce the title size */
  color: #ffffff;
  margin-top: 0;
  margin-bottom: 15px;
  font-style: italic; /* Add this line */
}

.project-description {
  font-size: 0.85em;  /* Reduce the description size */
  color: #ffffff;
}

.project p {
  margin-top: 0;
}

/* Ensures all project titles are white, including links */
.project-title a {
  color: #ffffff; /* Sets link color to white */
  text-decoration: underline; /* Keeps the underline for the link */
  transition: color 0.2s ease;
  font-size: 25px;
}

/* Optional: Change the hover effect */
.project-title a:hover {
  color: #cccccc; /* Slightly lighter color on hover */
}

/* Responsive Styles */
@media screen and (max-width: 768px) {
  .project {
    flex-direction: column;
    align-items: center;
    text-align: left;
  }

  .project-content {
    order: -1; /* Move content above the image */
    width: 100%;
    margin-bottom: 20px;
  }

  .project-image {
    width: 100%;
    max-width: 375px;
    margin: 0;
    box-sizing: border-box; /* Include borders in width calculation */
  }

  .project-title {
    font-size: 4.625vw;
    margin-bottom: 15px;
  }

  .project-description {
    font-size: 3.2vw;
    margin-left: 0px;
  }
}

@media screen and (max-width: 480px) {
  .project-title {
    font-size: 21.25px;
    margin-left: -20px;
  }

  .project-description {
    font-size: 5.25vw;
    margin-left: -20px;
    margin-right: 10px;
  }
}

@media screen and (min-width: 769px) {
  .project-image {
    width: 222.5px;
  }

  .project-title {
    font-size: 1.275em;
  }

  .project-description {
    font-size: 1em;
  }
  
  .project-title a {
    margin-left: 0px;
  }
}


@media screen and (max-width: 768px) {
  /* Hide NASA Rover project image for screen sizes 768px or less */
  .nasa-rover-image {
    display: none;
  }
}

